--- a/utseende.css
+++ b/utseende.css
@@ -11,6 +11,7 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  width: 100%;
 }
 
 h1 {
@@ -28,7 +29,7 @@ h2 {
   display: inline;
 }
 
-.sparesum {
+#sparesum {
   font-size: 40px;
   color: green;
   font-weight: 600;
