--- a/utseende.css
+++ b/utseende.css
@@ -25,6 +25,19 @@ h2 {
   font-size: 32px;
 }
 
+button {
+  width: 180px;
+  height: 50px;
+  border-radius: 100px;
+  border: 5px solid black;
+  background-color: white;
+  font-size: 1.5em;
+}
+
+button:hover {
+  background-color: lightgrey;
+}
+
 #du-har-spart-tekst h2 {
   display: inline;
 }
@@ -33,13 +46,4 @@ h2 {
   font-size: 40px;
   color: green;
   font-weight: 600;
-}
-
-button {
-  width: 180px;
-  height: 50px;
-  border-radius: 100px;
-  border: 5px solid black;
-  background-color: white;
-  font-size: 1.5em;
 }
