--- a/utseende/generelt-utseende.css
+++ b/utseende/generelt-utseende.css
@@ -12,6 +12,7 @@ body {
   justify-content: flex-end;
   align-items: center;
   width: 100%;
+  max-width: 100%;
 }
 
 h1 {
@@ -23,19 +24,6 @@ h1 {
 
 h2 {
   font-size: 32px;
-}
-
-button {
-  width: 180px;
-  height: 50px;
-  border-radius: 100px;
-  border: 5px solid black;
-  background-color: white;
-  font-size: 1.5em;
-}
-
-button:hover {
-  background-color: lightgrey;
 }
 
 #du-har-spart-tekst h2 {
