--- a/utseende/generelt-utseende.css
+++ b/utseende/generelt-utseende.css
@@ -26,12 +26,10 @@ h2 {
   font-size: 32px;
 }
 
-#du-har-spart-tekst h2 {
-  display: inline;
-}
-
-#sparesum {
-  font-size: 40px;
-  color: green;
-  font-weight: 600;
+button {
+  width: 180px;
+  height: 50px;
+  border-radius: 100px;
+  border: 5px solid black;
+  background-color: white;
 }
