--- a/utseende/putt-pa-penger-knapper.css
+++ b/utseende/putt-pa-penger-knapper.css
@@ -19,9 +19,12 @@
 */
 #putt-på-penger-knapper {
   display: flex;
-  justify-content: center;
-  width: 80%;
-  margin-top: 10px;
+  justify-content: space-between;
+  width: 60%;
+  max-width: 800px;
+  height: auto;
+  padding: 10px 20px;
+  flex-wrap: wrap;
 }
 
 /*KNAPP UTEN BILDE*/
@@ -33,7 +36,8 @@
   border-radius: 100px;
   border: 5px solid black;
   background-color: white;
-  font-size: 1.5em;
+  color: black;
+  font-size: 26px;
 }
 
 /*Dette vil du at skal skje når du holder musepekeren over knappen*/
