feat(todos): add more todos and restructure code

--- a/hvordan-skal-nettsiden-se-ut-(css)/putt-pa-penger-knapper.css
+++ b/hvordan-skal-nettsiden-se-ut-(css)/putt-pa-penger-knapper.css
@@ -11,7 +11,7 @@
   ◻ En id skal være unik for ett bestemt HTML-element.
   ◻ Regler som begynner på "#" gjelder altså bare for ett element. 
 
-  Se på HTML-taggene i innhold.html - så ser du hvor de ulike klassene og id-ene er brukt.
+  Se på HTML-taggene i hva-skal-nettsiden-inneholde.html - så ser du hvor de ulike klassene og id-ene er brukt.
 */
 
 /*Slik skal boksen som knappene bor i se ut.
