--- a/hvordan-skal-nettsiden-se-ut-(css)/spareinformasjon.css
+++ b/hvordan-skal-nettsiden-se-ut-(css)/spareinformasjon.css
@@ -11,7 +11,7 @@
   ◻ En id skal være unik for ett bestemt HTML-element.
   ◻ Regler som begynner på "#" gjelder altså bare for ett element. 
 
-  Se på HTML-taggene i innhold.html - så ser du hvor de ulike klassene og id-ene er brukt.
+  Se på HTML-taggene i hva-skal-nettsiden-inneholde.html - så ser du hvor de ulike klassene og id-ene er brukt.
 */
 
 /*Slik vil du at boksen som rammer inn du-har-spart-seksjonen skal se ut*/
@@ -41,7 +41,8 @@ I tillegg sier du hvordan du vil at boksen skal se ut når den vises */
   padding: 10px;
   text-align: center;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.42);
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /*Slik vil du at knappen som tømmer sparebøssen skal se ut*/
@@ -52,5 +53,5 @@ I tillegg sier du hvordan du vil at boksen skal se ut når den vises */
   border-radius: 100px;
   border: 5px solid black;
   background-color: white;
-  font-size: 1.5em;
+  font-size: 16px;
 }
